src/objects/BMCServiceDesk__DiscoveryMapping__c.object
<CustomObject>
    <description>Stores the mapping of Base Element and BMC Client Management fields.</description>
    <fields>
        <fullName>BMCServiceDesk__BaseElementField__c</fullName>
        <description>Field of Base Element object to which data will be stored.</description>
        <inlineHelpText>Field of Base Element object to which data will be stored.</inlineHelpText>
        <label>Base Element Field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DiscoveredDataField__c</fullName>
        <description>Field of the discovered object from which data is being imported.</description>
        <inlineHelpText>Field of the discovered object from which data is being imported.</inlineHelpText>
        <label>Discovered Data Field</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKCMDBClass__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Id of CMDB class of mapped field.</description>
        <inlineHelpText>Id of CMDB class of mapped field.</inlineHelpText>
        <label>CMDB Class</label>
        <referenceTo>BMCServiceDesk__CMDB_Class__c</referenceTo>
        <relationshipName>DiscoveryMappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__IsEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If CMDB class is selected for data import.</description>
        <inlineHelpText>If CMDB class is selected for data import.</inlineHelpText>
        <label>IsEnabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__LastImport__c</fullName>
        <description>Specifies date and time of last successful discovered devices import</description>
        <label>Last Import</label>
        <type>DateTime</type>
    </fields>
    <label>Discovery Mapping</label>
    <nameField>
        <displayFormat>Mapping-{0}</displayFormat>
        <label>DiscoveryMapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Discovery Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>